<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_marginHorizontal="@dimen/numbers_onscreen"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:text="@string/zero"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingVertical="@dimen/top_bottom"
            android:paddingHorizontal="@dimen/between_buttons"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:text="@string/Clear"
                android:id="@+id/btn_clear"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/plus_or_minus"
                android:id="@+id/btn_plus_or_minus"
                android:onClick="onOperationClick"
                android:layout_marginHorizontal="@dimen/between_buttons"
                style="@style/Gray.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/percentage"
                android:id="@+id/btn_percentage"
                android:onClick="onOperationClick"
                android:layout_marginEnd="@dimen/between_buttons"
                style="@style/Gray.Button"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/divide"
                android:id="@+id/btn_division"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/top_bottom"
            android:paddingHorizontal="@dimen/between_buttons"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:text="@string/seven"
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/eight"
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="@dimen/between_buttons"
                style="@style/Dark.Grey.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/nine"
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/between_buttons"
                style="@style/Dark.Grey.Button"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/multiply"
                android:id="@+id/btn_multiple"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/top_bottom"
            android:paddingHorizontal="@dimen/between_buttons"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:text="@string/four"
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/five"
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="@dimen/between_buttons"
                style="@style/Dark.Grey.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/six"
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/between_buttons"
                style="@style/Dark.Grey.Button"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/minus"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/top_bottom"
            android:paddingHorizontal="@dimen/between_buttons"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:text="@string/one"
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/two"
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="@dimen/between_buttons"
                style="@style/Dark.Grey.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/three"
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/between_buttons"
                style="@style/Dark.Grey.Button"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/plus"
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="@dimen/top_bottom"
            android:paddingHorizontal="@dimen/between_buttons"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:text="@string/zero"
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"
                android:layout_marginRight="@dimen/between_buttons"
                android:layout_width="178dp"
                android:textAlignment="viewStart"
                android:paddingStart="32dp"
                style="@style/Dark.Grey.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/dot"
                android:id="@+id/btn_dot"
               android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/between_buttons"
                style="@style/Dark.Grey.Button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/equal"
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>